--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,8 @@
     <title>Quantum</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:image" content="/share.png" />
+    <link rel="shortcut icon" href="/fav.ico" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script type="text/javascript" src="js/babylon.js"></script>
   </head>
