--- a/public/style.css
+++ b/public/style.css
@@ -368,6 +368,7 @@ body {
   align-items: center;
   justify-content: center;
   z-index: 10;
+  cursor: pointer;
 }
 
 #wrapper > div:nth-child(8) {
